--- a/frontend/src/assets/css/custom-styles.css
+++ b/frontend/src/assets/css/custom-styles.css
@@ -7,12 +7,41 @@
     overflow: visible;
 }
 
+.section {
+  background-color: #ffffff !important; }
+
+.lead {
+  color: #000000 !important;
+}
+
+.btn-icon {
+  font-family: Monaco!important;
+}
+
+.typewriter {
+  overflow: hidden;
+  /*border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  /*letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+  font-family: Monaco !important;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
 .section-hero {
     height: 100%
 }
 
 .section-shaped .shape-style-1.shape-default {
-    background: linear-gradient(150deg, #FF671F 23%, #ff8f00 100%, #e87722 60%) !important; }
+    background-color: #ffffff !important; }
 
 .app-card {
     min-width: 500px !important
