--- a/frontend/src/assets/css/custom-styles.css
+++ b/frontend/src/assets/css/custom-styles.css
@@ -31,6 +31,13 @@
     color: #ff8000 !important;
 }
 
+/* Links in navbar */
+.scroll-link {
+}
+.scroll-link-active {
+  border-bottom: 1px solid #333;
+}
+
 .centered {
   justify-content: center !important;
 }
