--- a/frontend/src/assets/css/custom-styles.css
+++ b/frontend/src/assets/css/custom-styles.css
@@ -83,11 +83,13 @@
 
 .nav-link-inner--text {
   font-family: Monaco;
-  color: #B2AFAE !important; 
+  color: #B2AFAE; 
 }
 
 .nav-link-inner--text:hover {
   font-weight: bold;
+  background-color: black;
+  color: #ff8f00; 
   text-decoration: underline;
 }
 
